CSV engine rewritten. Todo list in main_controller#export

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -1,5 +1,5 @@
 <%
-  params = request.params.except(:action, :controller, :model_name, :utf8)
+  params = request.params.except(:action, :controller, :model_name, :utf8, :bulk_export)
   query = params[:query]
   filter = params[:filter]
   sort = params[:sort]
@@ -55,7 +55,7 @@
               </fieldset>
             <% end %>
           </div>
-          <%= form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do %>
+          <%= form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :get do %>
             <table class="grid">
               <thead>
                 <tr>
@@ -78,15 +78,18 @@
                   <th class="action"><%= t("admin.list.edit_action").upcase if authorized? :edit, @abstract_model %></th>
                   <% if authorized? :delete, @abstract_model %>
                   <th class="action"><%= t("admin.list.delete_action").upcase %></th>
-                  <th class="action"><%= t("admin.list.select_action").upcase %></th>
                   <% end %>
+                  <th class="action"><%= t("admin.list.select_action").upcase %></th>
                 </tr>
               </thead>
               <tfoot>
                 <tr>
-                  <td colspan="<%= properties.length + 3 + (authorized?(:delete, @abstract_model) ? 2 : 0) %>">
+                  <td colspan="<%= properties.length + 5 %>">
                     <% if authorized? :delete, @abstract_model %>
-                      <%= submit_tag t("admin.list.delete_selected"), :class => "ra-button", :style => "float:right;margin-top: 10px;" %>
+                      <%= submit_tag t("admin.list.delete_selected"), :class => "ra-button", :style => "float:right;margin-top: 10px;", :name => :bulk_delete %>
+                    <% end %>
+                    <% if authorized? :export, @abstract_model %>
+                      <%= submit_tag t("admin.list.export_selected"), :class => "ra-button", :style => "float:right;margin-top: 10px;", :name => :bulk_export %>
                     <% end %>
                     <div class="pagination">
                       <% if @page_count.to_i > 1 %>
@@ -122,7 +125,7 @@
                   <td class="action delete">
                     <%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :delete, @abstract_model, object %>
                   </td>
-                  <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}" if authorized? :delete, @abstract_model, object %></td>
+                  <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}" %></td>
                   <% end %>
                 </tr>
                 <% end %>
