--- a/app/views/rails_admin/main/export.html.erb
+++ b/app/views/rails_admin/main/export.html.erb
@@ -20,7 +20,8 @@
       <fieldset>
         <legend><%= t('admin.export.fields_from', :name => @abstract_model.pretty_name) %></legend>
         <% visible_fields.select{ |f| !f.association? || f.association[:options][:polymorphic] }.each do |field| %>
-          <% list = field.type != 'virtual' ? 'only' : 'methods' %>
+        
+          <% list = field.type != :virtual ? 'only' : 'methods' %>
           <div class='field'>
             <label for="<%= "schema_#{list}_#{field.name}" %>">
               <%= @abstract_model.model.human_attribute_name(field.name) %>
@@ -28,10 +29,23 @@
             <%= check_box_tag "schema[#{list}][]", field.name, true, { :id => "schema_#{list}_#{field.name}" } %>
             <p class="help"><%= t('admin.export.display', :name => field.name, :type => field.type) %></p>
           </div>
+          
+            <% if field.association? && field.association[:options][:polymorphic] %>
+              <div class='field'>
+                <% polymorphic_type_column_name = @abstract_model.properties.find {|p| field.association[:options][:foreign_type] == p[:name].to_s }[:name] %>
+                <label for="<%= "schema_#{list}_#{polymorphic_type_column_name}" %>">
+                  <%= @abstract_model.model.human_attribute_name(polymorphic_type_column_name) %>
+                </label>
+                <%= check_box_tag "schema[#{list}][]", polymorphic_type_column_name, true, { :id => "schema_#{list}_#{polymorphic_type_column_name}" }  %>
+                <p class="help"><%= t('admin.export.display', :name => polymorphic_type_column_name, :type => field.type) %></p>
+              </div>
+            <% end %>
+          
         <% end %>
       </fieldset>
       
       <% visible_fields.select{ |f| f.association? && !f.association[:options][:polymorphic] }.each do |field| %>
+      
         <% 
           association = field.association
           associated_model = association[:type] == :belongs_to ? association[:parent_model] : association[:child_model]
