--- a/app/views/rails_admin/main/_form_filtering_select.html
+++ b/app/views/rails_admin/main/_form_filtering_select.html
@@ -13,7 +13,7 @@
               <div class="field <%= "#{field.dom_id}" %>">
                 <%= form.label field.method_name, field.label %>
                 <%= form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field.html_attributes %>
-                <% if authorized? :new, @abstract_model %>
+                <% if authorized? :new, config.abstract_model %>
                   <%= link_to "Add new #{config.abstract_model.to_param}", rails_admin_new_path(:model_name => config.abstract_model.to_param), :class => "createAssociatedRecord" %>
                 <% end %>
                 <% if field.has_errors? %>
