--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -5,8 +5,9 @@
   xhr = field.associated_collection_count > 100
 
   if xhr
+    label_method = config.with(:object => o).object_label_method
     collection = selected.map do |o|
-      [config.with(:object => o).object_label, o.id]
+      [o.send(label_method), o.id]
     end
   else
     collection = field.associated_collection.sort_by {|a| selected_ids.index(a[1]) || selected_ids.size }
