Position the submit_buttons at the bottom of form pages correctly. Helps with #37.

--- a/public/stylesheets/rails_admin/form.css
+++ b/public/stylesheets/rails_admin/form.css
@@ -131,3 +131,9 @@ form label.inline {
 .createAssociatedRecordDialog span.extra_buttons {
   display: none;
 }
+
+.group.navform.wat-cf {
+  /* position the submit_buttons correctly: */
+  margin-top: 30px;
+  margin-bottom: 0;
+}
