Testing and some doc

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -72,7 +72,7 @@
                   <% end %>
                 </select>
                 <div id="filters_box" style="clear:both; margin: 10px 10px;">
-                <div>
+                </div>
               </fieldset>
             <% end %>
           </div>
