--- a/app/views/layouts/rails_admin/_head.html.haml
+++ b/app/views/layouts/rails_admin/_head.html.haml
@@ -11,8 +11,8 @@
     = stylesheet_link_tag "rails_admin/theme/activo/style"
     = stylesheet_link_tag "rails_admin/base"
 
-    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
-    = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js", "/javascripts/rails_admin/jquery-ui-1.8.13.min.js", "!jQuery.ui"
+    = javascript_fallback "//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
+    = javascript_fallback "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js", "/javascripts/rails_admin/jquery-ui-1.8.13.min.js", "!jQuery.ui"
 
     - scripts = %w[jquery.localscroll.js jquery.scrollTo.js jquery.tipsy.js jquery.uniform.min.js ]
     = javascript_include_tag *scripts.map{ |s| "rails_admin/activo/#{s}" }
