Fix for updated route name (bulk_destroy).

--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -1,7 +1,7 @@
 - head_javascript "rails_admin/application.js"
 
 #block-tables.block
-  = breadcrumbs_for :bulk_delete, @abstract_model
+  = breadcrumbs_for :bulk_destroy, @abstract_model
   
   .content
     %h2.title Delete confirmation
