--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -1,4 +1,4 @@
-- params = request.params.except(:action, :controller, :model_name, :utf8)
+- params = request.params.except(:action, :controller, :model_name, :utf8, :bulk_export)
 - query = params[:query]
 - filter = params[:filter]
 - sort = params[:sort]
@@ -27,18 +27,23 @@
   
   .content
     .control
+      - if authorized? :export, @abstract_model
+        = action_button rails_admin_export_path(params.reject{|key, value| key.to_sym == :page}), t("admin.list.export_action"), nil, :method => :post
+        = action_button '#', t("admin.list.export_selected"), nil, :onclick => "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;"
+      
       = action_button rails_admin_history_model_path, t("admin.history.name")
 
       - if authorized? :new, @abstract_model
         = action_button rails_admin_new_path, t("admin.list.add_new"), :add
 
       - if authorized? :delete, @abstract_model
-        = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_delete_form').submit(); return false;"
+        = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;"
 
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-      = form_tag rails_admin_bulk_delete_path(@abstract_model), :method => :get, :id => "bulk_delete_form", :class => "form" do
+      = form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
+        = hidden_field_tag :bulk_action
         %table.table.grid
           %thead
             %tr
@@ -68,7 +73,7 @@
 
               %tr{:class => row_class, :"data-link" => (edit_path if can_edit)}
 
-                %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}", :class => "checkbox"
+                %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
                 - other_left = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param).reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
                 - properties.map{|property| property.bind(:object, object)}.each do |property|
